# jstw

jstw-web/: .env_example  .gitignore  Cargo.toml
jstw-web/src/: app_error.rs  db.rs  main.rs
jstw-web/src/api/: bookmarks.rs  mod.rs  router.rs
jstw-web/src/models/: app_state.rs  bookmark.rs  mod.rs
jstw-web/src/services/: bookmarks.rs
jstw-web/src/views/: homepage.rs  mod.rs  router.rs  shared.rs
